opam-version: "2.0"
maintainer: "hannes@mehnert.org"
authors: ["Anil Madhavapeddy" "Daniel C. Bünzli" "Matthew Gray" "Hannes Mehnert"]
license: "ISC"
tags: "org:mirage"
homepage: "https://github.com/mirage/mirage-ptime"
doc: "https://mirage.github.io/mirage-ptime/"
bug-reports: "https://github.com/mirage/mirage-ptime/issues"
synopsis: "Libraries and module types for portable clocks"
description: """
This library implements portable support for an operating system timesource
that is compatible with the [MirageOS](https://mirageos.org) library interfaces
found in: <https://github.com/mirage/mirage>

It implements a POSIX clock which counts time since the Unix epoch.
"""
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.8"}
  "ptime" {>= "1.1.0"}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/mirage-ptime.git"
x-maintenance-intent: [ "(latest)" ]
